# ChangeLog for app-text/zathura-pdf-poppler
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-text/zathura-pdf-poppler/ChangeLog,v 1.2 2012/03/11 14:45:15 ssuominen Exp $

*zathura-pdf-poppler-0.1.1 (11 Mar 2012)

  11 Mar 2012; Samuli Suominen <ssuominen@gentoo.org>
  +zathura-pdf-poppler-0.1.1.ebuild:
  Version bump.

*zathura-pdf-poppler-0.1.0 (08 Mar 2012)

  08 Mar 2012; Samuli Suominen <ssuominen@gentoo.org>
  +zathura-pdf-poppler-0.1.0.ebuild:
  Initial commit wrt #405289 by Paweł Rumian
