@@ -1,20 +1,18 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-DIST zathura-pdf-poppler-0.1.0.tar.gz 7438 RMD160 390cd1fbde0a959993f65be7aa7bd0d33c9d2fe9 SHA1 3631b4f608f2fc5a856953326e1f48f61f51c173 SHA256 16aed3ad43fad2c8da8e2c1173b92d37de8a1875e41ab713134909880d195da6
 DIST zathura-pdf-poppler-0.1.1.tar.gz 7584 RMD160 e310946e29faa05bb827527232c55bd34288c802 SHA1 6a644127f272c0bbb1582334935a0206ead8e4b9 SHA256 bec5fee721fcaee9f4b53d3882908b19efa82815393aa8c3619ff948b909d4a7
-EBUILD zathura-pdf-poppler-0.1.0.ebuild 826 RMD160 94a8f2da86282d3cde3133ebde2eb83e6d68ca91 SHA1 e32307b2983635a6444315c205a05ddaddb64343 SHA256 423b876054a3e4eef509c87c71a0543e0c754dca8fef1e2cc71d014154f89fa6
 EBUILD zathura-pdf-poppler-0.1.1.ebuild 834 RMD160 32df767154128cca21807569b6b09608c7798ffa SHA1 fda2730545ee2d6d39a3bcf0410b70fd6ab2a924 SHA256 7f56fe77ced5b7d9d361a38097949e1196970cf42f1d598d1d0294a2229921e4
-MISC ChangeLog 562 RMD160 99b069131790341a08641bdd2076a6cc43f2ff06 SHA1 834c663f5cedeaa7e1b7f4bafc3b2d4ad74b5b02 SHA256 0ec9bd15519f3d49d2520d15982e67c7ddbb1d3c2f690b0b1591d23e97f4d136
+MISC ChangeLog 660 RMD160 6844b040dc9839c1821b475a23400a999666a479 SHA1 78061fe42df5d7d2f765559a2fd1f97c0c81e61d SHA256 09ab76795040f169b6439704f17b5a302966d9dfd9670cb1a87350270065cc5a
 MISC metadata.xml 342 RMD160 323c7e724b10e283597f4cb3b44689dff4377cc2 SHA1 68919f7c1ff0d4c362b8c3954bc3b04a743f7dfe SHA256 57da1012a80ac7b3f5844c593af2f963adb5318cffc057cbe243b4bc7bc356ce
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.18 (GNU/Linux)
 
-iQEcBAEBAgAGBQJPXLl9AAoJEEdUh39IaPFNBKAH/iw1bsQRZx//xmuXIFgOgi5Q
-6xQwhompWK7IAAntgLRHUtgwLqtyvUY/oPNQ8sNiQVOZvKZAPofF/JoJPGTYEymN
-2fIMfuKJili8mczANSgFCsFxWW8ghxUEyH5ik6Aj1EQFZYrOKpLp1s/O29P80Q/1
-DcUmMx0HZMoSAN4y9kUgl0KbMWR2JLd5r3RAQqnF4BVtREPVXuSQbuTe5zZVEJGj
-MR0u8dgpXKC/NIPr7a63QTl9JCg5lXVIo0zHihcZJW2NNplG6LGDuBTpsqp4R0pX
-mIdd7SxEqQQ5lYZ7zXZQZwpYkag7AuVg7+sAZvCOjLSx3ximo59zQ9bOTQ77jDk=
-=AhYU
+iQEcBAEBAgAGBQJPXMB9AAoJEEdUh39IaPFN2DkH/0J0qi6YNDeII7CSvXZb7mPy
+qJJqaL0uW/uW60WR3Tk3fGv3e9dOR5cf8soznpf0hlJ88buQRsUqmoCFQHlcaXgs
+7ox4ke4nIP0hGFpCkGJfCYQE0EIHw+wURTQLT0vqMvwRRbtiTO1AVYoZaG84CFZh
+PwXETULnk/LnGbd21uqpQdHrZ8GM6yx+VpbsT938TUerPQRxZ9tsgXjcp/QBkivp
+pfn5GrA67/PGYPkepIo/D/PVr6YyyuV8HWgrf37Rm5wigPKDMZevzMt+91PMb0hz
+cK6xTM8+ZIzEsXRYyuJn7QEfuya7QsXnuiTGLQOF7hwlfIU24IVnxtTZ8DNeT7w=
+=DUeK
 -----END PGP SIGNATURE-----
