@@ -1,6 +1,10 @@
 # ChangeLog for app-text/zathura-pdf-poppler
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/zathura-pdf-poppler/ChangeLog,v 1.2 2012/03/11 14:45:15 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/zathura-pdf-poppler/ChangeLog,v 1.3 2012/03/11 15:15:05 ssuominen Exp $
+
+  11 Mar 2012; Samuli Suominen <ssuominen@gentoo.org>
+  -zathura-pdf-poppler-0.1.0.ebuild:
+  old
 
 *zathura-pdf-poppler-0.1.1 (11 Mar 2012)
 
